# goetsuese-master-app-monorepo

./: .gitignore  .gitmodules  NOTICE  README.md  docker-compose.yml
.cursor/rules/: no-uncommanded-commits.mdc
backend/: .env.example  Cargo.toml
backend/src/: lib.rs  main.rs  translit_spawn.rs
frontend/: .gitignore  README.md  colour-palete.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx
frontend/app/(site)/: layout.tsx  page.tsx
frontend/app/(site)/declaration/: body.ts  page.tsx
frontend/app/(site)/tools/anglicanized-romanisation/: page.tsx
frontend/app/(site)/tools/ime/: page.tsx
frontend/app/(site)/tools/jyutcitzi-phonology/: page.tsx
frontend/app/(site)/tools/natural-jyutping/: page.tsx
frontend/app/(site)/tools/transliterate/: page.tsx
frontend/app/declaration/: body.ts  page.tsx
frontend/components/: AngloCantoneseTool.tsx  FontResourcesBlock.tsx  GoogleAnalytics.tsx  InstantChoicefulTranslator.tsx  IntroVideoBlock.tsx  JyutcitziPhonologyTables.tsx  Navbar.tsx  SiteLogo.tsx  ThemeInlineScript.tsx  ThemeToggle.tsx  ToolCard.tsx  TrackedExternalLink.tsx  links.ts
frontend/components/goetsusioji/: GoetsusiojiExamples.tsx
frontend/components/ime/: GoetsusiojiIme.tsx  JyutcitziIme.tsx  NaturalJyutpingIme.tsx
frontend/components/natural-jyutping/: NaturalJyutcitziExamples.tsx
frontend/config/: external-urls.ts  site-offerings.ts
frontend/lib/: analytics.ts  ui-styles.ts
frontend/lib/anglo-cantonese/: README.md  mapping.json  translator.ts
frontend/lib/fonts/: babel-stone-han.ts  hana-min.ts
frontend/lib/goetsusioji/: buildIndexes.ts  examples.ts  index.ts  loadLexicon.ts  lookup.ts  mapper.ts  normalize.ts  types.ts
frontend/lib/ime/: decodeLexicon.ts  lookup.ts  profile.ts
frontend/lib/jyutcitzi-reform/: phonology-data.ts
frontend/lib/natural-jyutping/: buildIndexes.ts  examples.ts  index.ts  loadLexicon.ts  lookup.ts  normalize.ts  phonology.ts  syllableParts.ts  types.ts
frontend/public/goetsusioji/: meta.json  syllables.json
frontend/public/natural-jyutcitzi/: characters.json
frontend/public/natural-jyutping/: characters.json
frontend/scripts/anglo-cantonese/: sync-mapping.mjs
frontend/scripts/goetsusioji/: export-syllables.mjs
frontend/scripts/ime/: README.md  build-lexicons.mjs  update-rime-submodule.mjs
transliteration/: Dockerfile  README.md  main.py  railway.toml  requirements.txt
(+1 files in other folders)
