[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[lib]
name = "backend"

[dependencies]
axum = { version = "0.8.4", features = ["multipart", "macros"] }
axum-extra = { version = "0.9.6", features = ["cookie", "query"] }
http-body-util = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_with = "3.11.0"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
mongodb = "3.1.0"
bson = { version = "2.13.0", features = ["chrono-0_4", "serde_with-3"] }
rust_decimal = { version = "1.36.0", features = ["maths"] }
rust_decimal_macros = "1.36.0"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
anyhow = "1.0.91"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = [
    "trace",
    "cors",
    "timeout",
    "compression-gzip",
    "catch-panic",
] }
serde_json = "1"
serde_bytes = "0.11"
reqwest = { version = "0.12", features = ["json", "multipart"] }
url = "2.5"
hyper = "1.6.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.77"
futures = "0.3"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
base64 = "0.21"
async-graphql = { version = "7.0", features = ["chrono", "dataloader"] }
async-graphql-axum = "7.0"

utoipa = { version = "5.0.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
mongodb-gridfs = "0.2.7"
rusoto_core = "0.48"
rusoto_credential = "0.48"
rusoto_s3 = "0.48"


rand = "0.8"
hex = "0.4"
borsh = "1.5"
bincode = "1.3"
