[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[lib]
name = "backend"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dotenvy = "0.15.7"
anyhow = "1.0.91"
tower-http = { version = "0.6.1", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
utoipa = { version = "5.0.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
